--- a/MEMOO/MEMOO/Base.lproj/LaunchScreen.storyboard
+++ b/MEMOO/MEMOO/Base.lproj/LaunchScreen.storyboard
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="19455" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="01J-lp-oVM">
-    <device id="retina3_5" orientation="portrait" appearance="light"/>
+    <device id="retina5_9" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="19454"/>
@@ -13,29 +13,31 @@
             <objects>
                 <viewController id="01J-lp-oVM" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="Ze5-6b-2t3">
-                        <rect key="frame" x="0.0" y="0.0" width="320" height="480"/>
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="812"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="bg_start" translatesAutoresizingMaskIntoConstraints="NO" id="8qj-EA-Qrk">
-                                <rect key="frame" x="0.0" y="0.0" width="320" height="480"/>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="bgg" translatesAutoresizingMaskIntoConstraints="NO" id="8qj-EA-Qrk">
+                                <rect key="frame" x="-3995" y="-326" width="5889" height="1138"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" secondItem="8qj-EA-Qrk" secondAttribute="height" multiplier="5889:1138" id="3Wz-Cu-2jo"/>
+                                </constraints>
                             </imageView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
-                            <constraint firstItem="8qj-EA-Qrk" firstAttribute="trailing" secondItem="Ze5-6b-2t3" secondAttribute="trailing" id="S2Q-dS-ZKV"/>
-                            <constraint firstItem="8qj-EA-Qrk" firstAttribute="top" secondItem="Ze5-6b-2t3" secondAttribute="top" id="a2P-Qf-VZc"/>
-                            <constraint firstItem="8qj-EA-Qrk" firstAttribute="bottom" secondItem="Ze5-6b-2t3" secondAttribute="bottom" id="bLx-Da-D8v"/>
-                            <constraint firstItem="8qj-EA-Qrk" firstAttribute="leading" secondItem="Ze5-6b-2t3" secondAttribute="leading" id="hTX-h0-Tad"/>
+                            <constraint firstItem="8qj-EA-Qrk" firstAttribute="bottom" secondItem="Ze5-6b-2t3" secondAttribute="bottom" id="aL8-M8-Ax8"/>
+                            <constraint firstAttribute="trailing" secondItem="8qj-EA-Qrk" secondAttribute="trailing" constant="-1519" id="sSR-wg-PWt"/>
+                            <constraint firstItem="8qj-EA-Qrk" firstAttribute="leading" secondItem="Ze5-6b-2t3" secondAttribute="leading" constant="-3995" id="tra-iY-dlI"/>
                         </constraints>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="iYj-Kq-Ea1" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="52.5" y="375"/>
+            <point key="canvasLocation" x="52" y="374.6305418719212"/>
         </scene>
     </scenes>
     <resources>
-        <image name="bg_start" width="720" height="1137"/>
+        <image name="bgg" width="7200" height="1138"/>
     </resources>
 </document>
