--- a/MEMOO/MEMOO/Base.lproj/Main.storyboard
+++ b/MEMOO/MEMOO/Base.lproj/Main.storyboard
@@ -598,6 +598,35 @@
             </objects>
             <point key="canvasLocation" x="524" y="-413.05418719211826"/>
         </scene>
+        <!--Preview Artefact View Controller-->
+        <scene sceneID="mAn-aT-Wbq">
+            <objects>
+                <viewController storyboardIdentifier="PreviewArtefactViewController" useStoryboardIdentifierAsRestorationIdentifier="YES" id="Zac-JF-Cg3" customClass="PreviewArtefactViewController" customModule="MEMOO" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="9lU-yT-pil">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="812"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="8sg-MC-lg8">
+                                <rect key="frame" x="40" y="68" width="295" height="295"/>
+                                <color key="backgroundColor" name="green_"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" secondItem="8sg-MC-lg8" secondAttribute="height" multiplier="1:1" id="WU4-Cd-o5z"/>
+                                </constraints>
+                            </imageView>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="p8X-T9-Gwk"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="p8X-T9-Gwk" firstAttribute="trailing" secondItem="8sg-MC-lg8" secondAttribute="trailing" constant="40" id="Ngh-UY-ebY"/>
+                            <constraint firstItem="8sg-MC-lg8" firstAttribute="top" secondItem="p8X-T9-Gwk" secondAttribute="top" constant="24" id="Sxj-Do-aWR"/>
+                            <constraint firstItem="8sg-MC-lg8" firstAttribute="leading" secondItem="p8X-T9-Gwk" secondAttribute="leading" constant="40" id="VVb-8n-Aya"/>
+                        </constraints>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="olE-Mq-tJU" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-935" y="-413"/>
+        </scene>
         <!--Artefact View Controller-->
         <scene sceneID="oZU-In-qoZ">
             <objects>
@@ -606,26 +635,21 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="812"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <visualEffectView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="M83-KC-dR1">
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" alpha="0.75" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="bgGame" translatesAutoresizingMaskIntoConstraints="NO" id="FOj-Rs-vB0">
                                 <rect key="frame" x="0.0" y="0.0" width="375" height="812"/>
-                                <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="xqb-Fe-q32">
-                                    <rect key="frame" x="0.0" y="0.0" width="375" height="812"/>
-                                    <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                                </view>
-                                <blurEffect style="systemThinMaterialLight"/>
-                            </visualEffectView>
-                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" scrollEnabled="NO" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="8Ds-RH-7fY">
-                                <rect key="frame" x="0.0" y="134" width="375" height="678"/>
+                            </imageView>
+                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="8Ds-RH-7fY">
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="812"/>
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="0.0" minimumInteritemSpacing="0.0" id="cJI-Fr-pHA">
+                                <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="4" minimumInteritemSpacing="4" id="cJI-Fr-pHA">
                                     <size key="itemSize" width="166" height="166"/>
                                     <size key="headerReferenceSize" width="0.0" height="0.0"/>
                                     <size key="footerReferenceSize" width="0.0" height="0.0"/>
-                                    <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                                    <inset key="sectionInset" minX="24" minY="64" maxX="24" maxY="120"/>
                                 </collectionViewFlowLayout>
                                 <cells>
                                     <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="ArtefactCell" id="0ot-ZX-5lR" customClass="ArtefactCell" customModule="MEMOO" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="0.0" width="166" height="166"/>
+                                        <rect key="frame" x="104.66666666666667" y="64" width="166" height="166"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO">
                                             <rect key="frame" x="0.0" y="0.0" width="166" height="166"/>
@@ -639,6 +663,7 @@
                                                             <subviews>
                                                                 <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="0aa-28-5DE" customClass="CardView" customModule="MEMOO" customModuleProvider="target">
                                                                     <rect key="frame" x="0.0" y="0.0" width="154" height="154"/>
+                                                                    <color key="backgroundColor" name="Orange_"/>
                                                                 </imageView>
                                                             </subviews>
                                                             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -671,10 +696,10 @@
                                 </cells>
                             </collectionView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="f1O-ad-Fcy">
-                                <rect key="frame" x="321" y="44" width="50" height="50"/>
+                                <rect key="frame" x="152.66666666666666" y="692" width="70" height="70"/>
                                 <constraints>
-                                    <constraint firstAttribute="width" constant="50" id="4aD-cc-o91"/>
-                                    <constraint firstAttribute="height" constant="50" id="ax9-0C-AP0"/>
+                                    <constraint firstAttribute="width" constant="70" id="4aD-cc-o91"/>
+                                    <constraint firstAttribute="height" constant="70" id="ax9-0C-AP0"/>
                                 </constraints>
                                 <inset key="imageEdgeInsets" minX="4" minY="4" maxX="4" maxY="4"/>
                                 <state key="normal" image="buttonClose"/>
@@ -684,17 +709,17 @@
                             </button>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="aRf-mC-1G5"/>
-                        <color key="backgroundColor" white="1" alpha="0.50271626660000002" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
-                            <constraint firstItem="8Ds-RH-7fY" firstAttribute="top" secondItem="aRf-mC-1G5" secondAttribute="top" constant="90" id="0ht-6A-RNI"/>
+                            <constraint firstItem="8Ds-RH-7fY" firstAttribute="top" secondItem="Pv6-4f-Jfx" secondAttribute="top" id="0ht-6A-RNI"/>
                             <constraint firstItem="8Ds-RH-7fY" firstAttribute="trailing" secondItem="aRf-mC-1G5" secondAttribute="trailing" id="JB8-Fh-pAf"/>
-                            <constraint firstItem="M83-KC-dR1" firstAttribute="top" secondItem="Pv6-4f-Jfx" secondAttribute="top" id="Jr8-QD-LR5"/>
-                            <constraint firstItem="M83-KC-dR1" firstAttribute="leading" secondItem="Pv6-4f-Jfx" secondAttribute="leading" id="KPU-9E-wxN"/>
-                            <constraint firstAttribute="trailing" secondItem="M83-KC-dR1" secondAttribute="trailing" id="Wz5-z2-K1C"/>
-                            <constraint firstAttribute="bottom" secondItem="M83-KC-dR1" secondAttribute="bottom" id="YNa-WW-e38"/>
-                            <constraint firstItem="f1O-ad-Fcy" firstAttribute="top" secondItem="aRf-mC-1G5" secondAttribute="top" id="dSa-fu-cgy"/>
+                            <constraint firstAttribute="trailing" secondItem="FOj-Rs-vB0" secondAttribute="trailing" id="UuO-Bz-LNx"/>
+                            <constraint firstItem="f1O-ad-Fcy" firstAttribute="centerX" secondItem="Pv6-4f-Jfx" secondAttribute="centerX" id="gDY-OV-bYG"/>
                             <constraint firstAttribute="bottom" secondItem="8Ds-RH-7fY" secondAttribute="bottom" id="iAr-ks-hQK"/>
-                            <constraint firstItem="aRf-mC-1G5" firstAttribute="trailing" secondItem="f1O-ad-Fcy" secondAttribute="trailing" constant="4" id="jCR-6g-4pP"/>
+                            <constraint firstItem="aRf-mC-1G5" firstAttribute="bottom" secondItem="f1O-ad-Fcy" secondAttribute="bottom" constant="16" id="jAN-M8-i4e"/>
+                            <constraint firstAttribute="bottom" secondItem="FOj-Rs-vB0" secondAttribute="bottom" id="kdP-WA-C6U"/>
+                            <constraint firstItem="FOj-Rs-vB0" firstAttribute="leading" secondItem="Pv6-4f-Jfx" secondAttribute="leading" id="lKk-mD-nDh"/>
+                            <constraint firstItem="FOj-Rs-vB0" firstAttribute="top" secondItem="Pv6-4f-Jfx" secondAttribute="top" id="wcf-eT-mvZ"/>
                             <constraint firstItem="8Ds-RH-7fY" firstAttribute="leading" secondItem="aRf-mC-1G5" secondAttribute="leading" id="y84-eV-e5Q"/>
                         </constraints>
                         <connections>
@@ -704,7 +729,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="uDN-p6-DVd" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-183" y="-413"/>
+            <point key="canvasLocation" x="-183.19999999999999" y="-413.05418719211826"/>
         </scene>
     </scenes>
     <resources>
@@ -721,6 +746,12 @@
         <image name="stone" width="100" height="100"/>
         <namedColor name="Brown_">
             <color red="0.50196078431372548" green="0.15686274509803921" blue="0.039215686274509803" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
+        <namedColor name="Orange_">
+            <color red="0.97600001096725464" green="0.28200000524520874" blue="0.21799999475479126" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
+        <namedColor name="green_">
+            <color red="0.41200000047683716" green="0.72200000286102295" blue="0.23499999940395355" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
         <systemColor name="systemTealColor">
             <color red="0.18823529411764706" green="0.69019607843137254" blue="0.7803921568627451" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
