--- a/MEMOO/MEMOO/Base.lproj/Main.storyboard
+++ b/MEMOO/MEMOO/Base.lproj/Main.storyboard
@@ -706,7 +706,6 @@
                                                             <subviews>
                                                                 <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="0aa-28-5DE" customClass="CardView" customModule="MEMOO" customModuleProvider="target">
                                                                     <rect key="frame" x="0.0" y="0.0" width="154" height="154"/>
-                                                                    <color key="backgroundColor" name="Orange_"/>
                                                                 </imageView>
                                                             </subviews>
                                                             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -735,6 +734,9 @@
                                             <constraint firstItem="EcL-dL-I2A" firstAttribute="top" secondItem="0ot-ZX-5lR" secondAttribute="top" constant="2" id="sZc-i9-qlN"/>
                                             <constraint firstAttribute="bottom" secondItem="EcL-dL-I2A" secondAttribute="bottom" constant="2" id="xYr-fY-K6E"/>
                                         </constraints>
+                                        <connections>
+                                            <outlet property="artefactImage" destination="0aa-28-5DE" id="rDJ-uv-mD8"/>
+                                        </connections>
                                     </collectionViewCell>
                                 </cells>
                             </collectionView>
@@ -892,9 +894,6 @@
         <image name="layer_4" width="7200" height="1139"/>
         <namedColor name="DarkGray_">
             <color red="0.20000000298023224" green="0.20000000298023224" blue="0.20000000298023224" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-        </namedColor>
-        <namedColor name="Orange_">
-            <color red="0.97600001096725464" green="0.28200000524520874" blue="0.21799999475479126" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
         <namedColor name="green_">
             <color red="0.41200000047683716" green="0.72200000286102295" blue="0.23499999940395355" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
